Websocket: fixed multi-alert, saving before css positioning edit for alerts to be behind

--- a/src/play/play1.css
+++ b/src/play/play1.css
@@ -4,6 +4,7 @@
   background-color: gray;
 
   text-align: center;
+  z-index: 1;
 }
 
 #step-and-score{
